<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/menu_refuels"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/menu_refuels" />
    <item
        android:id="@+id/menu_safety"
        android:icon="@android:drawable/ic_dialog_alert"
        android:title="@string/menu_safety" />
    <item
        android:id="@+id/menu_indicators"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/indicators_title" />
    <item
        android:id="@+id/menu_manage"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/menu_manage" />
</menu>
